Minor UI tweak to prevent cutoff text

--- a/src/web/card-style.css
+++ b/src/web/card-style.css
@@ -30,7 +30,7 @@ a {
 
 #card-content {
     width: 100%;
-    min-height: 48%;
+    height: 48%;
 }
 
 #card-content-text {
@@ -77,7 +77,7 @@ a {
 }
 
 .expand {
-    height: 78%;
+    height: 78% !important;
 }
 
 .hidden {
